--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=dealership_api_starter
 
-datasource.url=jdbc:mysql://localhost:3306/dealership_api_db
+datasource.url=jdbc:mysql://localhost:3306/dealership_db
 datasource.username=root
-datasource.password=12345678
+datasource.password=YUm15510n
 
 #server.port=8080
