--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=dealership_api_starter
 
-datasource.url=jdbc:mysql://localhost:3306/dealership_db
+datasource.url=jdbc:mysql://localhost:3306/dealership_api_db
 datasource.username=root
 datasource.password=YUm15510n
 
